# automl_mini

./: .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  automl_mini_overview.md  automl_simple_overview.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  ci.yml  docs.yml  status.yml
docs/: workflow.md
examples/: basic_usage.py
src/automl_mini/: __init__.py  models.py  pipeline.py  preprocessing.py  utils.py
src/automl_mini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_pipeline.py  test_preprocessing.py  test_utils.py
